# game-of-life-rust

./: Cargo.toml  README.md  config.toml
src/: backend.rs  main.rs
